kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-java
  labels:
    app: demo-java
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-java
  template:
    metadata:
      labels:
        app: demo-java
    spec:
      containers:
        - name: demo-java
          image: $IMAGE_NAME
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /api/actuator/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: demo-java-service
spec:
  type: ClusterIP
  selector:
    app: demo-java
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-java-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: demo-java.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: demo-java-service
                port:
                  number: 80
